fix small css fixes for contest view

--- a/client/templates/contests/draftTeam/contests.sass
+++ b/client/templates/contests/draftTeam/contests.sass
@@ -31,7 +31,7 @@ $lightBlue: #3f96cb
   .event-filter-tab
     height: 100%
     border: 1px solid white
-    padding-top: 5px 0
+    padding: 5px 0
 
     &:hover
       border-left: 1px solid $accent-highlight
@@ -39,6 +39,7 @@ $lightBlue: #3f96cb
 
   .event-filter
     height: 60px
+    padding-left: 10px
     font-color: $lightBlue 
 
 .fa-plus-circle
@@ -85,10 +86,12 @@ $lightBlue: #3f96cb
   .player-photo
     height: 50px
     width: 68px
+    border-radius: 50%
 
   .player-photo-anonymous
     height: 50px
     width: 50px
+    border-radius: 50%
 
   .lineup-player-selection,
   .lineup-player-enter
