add upcoming entry image for defense

--- a/client/templates/entries/entry.sass
+++ b/client/templates/entries/entry.sass
@@ -1,24 +1,28 @@
 .entry-view
 	height: 500px
 
-.point-score
-	font-family: 'jersey'
-	font-size: 4em
+	.point-score
+		font-family: 'jersey'
+		font-size: 4em
 
-.decimal-score
-	font-size: 1.2em
-	font-style: italic
-	color: gray
-	font-weight: 300
+	.decimal-score
+		font-size: 1.2em
+		font-style: italic
+		color: gray
+		font-weight: 300
 
-.player-row
-	margin-bottom: 40px
+	.player-row
+		margin-bottom: 40px
 
-.entry-view-mini
-	width: 34px 
+	.entry-view-mini
+		width: 34px 
 
-.font-jersey
-	font-family: 'jersey'
+	.font-jersey
+		font-family: 'jersey'
 
-.contest-name
-	font-size: 2em
+	.contest-name
+		font-size: 2em
+
+	.team-logo
+		height: 50px
+		width: 50px
