--- a/client/templates/entries/entry.jade
+++ b/client/templates/entries/entry.jade
@@ -14,8 +14,12 @@ template(name='entryView')
       each roster
         +AnimateWithVelocity
           div(class='col-md-2' data-animate data-property="opacity" data-duration="1000" data-from-value="0" data-to-value="1")
-            img(src="{{playerImageESPN espn_id=espn_id espn_size='micro' sport=sport }}")
-            div #{ last_name }, #{ first_name }
+            if espn_id
+              img(src="{{playerImageESPN espn_id=espn_id espn_size='micro' sport=sport }}")
+              div #{ last_name }, #{ first_name }
+            else if team_id
+              img(class='team-logo' src="{{teamLogoESPN espn_id=team_id espn_size='small' sport=sport }}")
+              div #{ full_name }
             div(class='font-jersey size-22') #{ score }
             each relevantStats
               div #{ value } #{ type }
@@ -32,9 +36,11 @@ template(name='entryViewMini')
     each roster
       +AnimateWithVelocity
         span(class='col-md-2' data-animate data-property="opacity" data-duration="1000" data-from-value="0" data-to-value="1")
-          if sport
-            img(class='entry-view-mini' src="{{playerImageESPN espn_id = espn_id espn_size = 'micro' sport=sport }}")
-          else //- NOTE: REMOVE THIS IF ELSE Once 'NFL' is stored on All Rosters
-            img(class='entry-view-mini' src="{{playerImageESPN espn_id = espn_id espn_size = 'micro' sport='NFL' }}")
+          if espn_id
+            img(class='entry-view-mini' src="{{playerImageESPN espn_id=espn_id espn_size='micro' sport=sport }}")
+          else if team_id
+            img(class='entry-view-mini' src="{{teamLogoESPN espn_id=team_id espn_size='small' sport=sport }}")
+          else
+            img(class='entry-view-mini' src="{{playerImageESPN espn_id=espn_id espn_size='micro' sport='NFL' }}")
           div #{ last_name }, #{ first_name }
           div #{ score }
