--- a/client/templates/entries/entry.sass
+++ b/client/templates/entries/entry.sass
@@ -26,3 +26,10 @@
 	.team-logo
 		height: 50px
 		width: 50px
+
+.entry-view-mini
+	.team-logo
+		height: 50px
+		width: 50px
+	// .name
+	// 	margin: auto
