--- a/client/templates/administrator/fixture/fixtureCreate.jade
+++ b/client/templates/administrator/fixture/fixtureCreate.jade
@@ -6,6 +6,7 @@ template(name='fixtureCreate')
         select(id='event-sport-select')
           option(value='NFL') NFL Week
         select(id='event-schedule-select')
+          option(value='1') 1
           option(value='2') 2
           option(value='3') 3
           option(value='4') 4
@@ -21,6 +22,7 @@ template(name='fixtureCreate')
           option(value='14') 14
           option(value='15') 15
           option(value='16') 16
+          option(value='17') 17
         div(class='btn btn-sm btn-default update-events') Update Events
       div(class='col-md-6')
         h4 Step 2: Create a Fixture
