create defaults for select boxes in the Contest Creation page, minimizing errors in creation

--- a/client/templates/administrator/contest/contestCreate.jade
+++ b/client/templates/administrator/contest/contestCreate.jade
@@ -5,7 +5,7 @@ template(name='contestCreate')
         div(class='form-section footspace-25')
           div(class='row')
             label(class='col-md-3')
-              input(type='radio' value='NFL' name='sport-select')
+              input(type='radio' value='NFL' name='sport-select' checked)
               span NFL
             label(class='col-md-3')
               input(type='radio' value='NBA' name='sport-select')
@@ -39,7 +39,7 @@ template(name='contestCreate')
         div(class='form-section footspace-25')
           div(class='row')
             label(class='col-md-12')
-              input(type='radio' value='league' name='contest-type-select')
+              input(type='radio' value='league' name='contest-type-select' checked)
               span League
             label(class='col-md-12')
               input(type='radio' value='h2h' name='contest-type-select')
@@ -48,7 +48,7 @@ template(name='contestCreate')
         div(class='form-section footspace-25')
           div(class='row')
             label(class='col-md-12')
-              input(type='radio' value='public' name='public-status-select')
+              input(type='radio' value='public' name='public-status-select' checked)
               span Public
             label(class='col-md-12')
               input(type='radio' value='private' name='public-status-select')
@@ -74,11 +74,11 @@ template(name='contestCreate')
                 +each availablePrizeStructures
                   option(value='{{this}}') {{this}}
     div(class='row')
-      div(class='col-md-12') Name Your League (optional, 25 char max)
+      div(class='col-md-12') League Name
         div(class='form-section footspace-25')
           div(class='row')
             div(class='col-md-12')
-              input(type='text' name='league-name' maxlength='25')
+              input(type='text' name='league-name' maxlength='25' value='Hot League')
     div(class='row')
       div(class='col-md-24')
         div(class='row')
