--- a/client/templates/administrator/fixture/fixtureCreate.jade
+++ b/client/templates/administrator/fixture/fixtureCreate.jade
@@ -26,7 +26,27 @@ template(name='fixtureCreate')
         div(class='btn btn-sm btn-default update-events') Update Events
       div(class='col-md-6')
         h4 Step 2: Create a Fixture
-        +each allFutureEvents
+        select(id='fixture-sport-select')
+          option(value='NFL') NFL Week
+        select(id='fixture-schedule-select')
+          option(value='1') 1
+          option(value='2') 2
+          option(value='3') 3
+          option(value='4') 4
+          option(value='5') 5
+          option(value='6') 6
+          option(value='7') 7
+          option(value='8') 8
+          option(value='9') 9
+          option(value='10') 10
+          option(value='11') 11
+          option(value='12') 12
+          option(value='13') 13
+          option(value='14') 14
+          option(value='15') 15
+          option(value='16') 16
+          option(value='17') 17
+        +each weeklyNFLSelection
           div(class='event-options cursor') {{momentify startsAt 'longDateTime'}} #{home} #{away}
         div(class='btn btn-sm btn-default create-fixture') Create Fixture
       div(class='col-md-6')
