fixed scoring pipeline

--- a/client/templates/administrator/fixture/fixtureCreate.jade
+++ b/client/templates/administrator/fixture/fixtureCreate.jade
@@ -53,7 +53,7 @@ template(name='fixtureCreate')
         div(class='row')
           div(class='col-md-24')
             h4 Step 3. View Fixtures
-        +each fixtures
+        +each weeklyNFLFixtures
           div(class='row fixture-item')
             div(class='col-md-4')
               span
