--- a/client/templates/administrator/score/score.jade
+++ b/client/templates/administrator/score/score.jade
@@ -3,6 +3,28 @@ template(name='score')
     div(class='row')
       div(class='col-md-3')
         h4 Step 00: All In One (TESTING)
+        select(id='score-sport-select')
+          option(value='NFL') NFL Week
+        select(id='score-schedule-select')
+          option(value='1') 1
+          option(value='2') 2
+          option(value='3') 3
+          option(value='4') 4
+          option(value='5') 5
+          option(value='6') 6
+          option(value='7') 7
+          option(value='8') 8
+          option(value='9') 9
+          option(value='10') 10
+          option(value='11') 11
+          option(value='12') 12
+          option(value='13') 13
+          option(value='14') 14
+          option(value='15') 15
+          option(value='16') 16
+          option(value='17') 17
+        div(class='btn btn-sm btn-default score-week-all') Score Week
+
         +each liveEvents
           div(class='event-options cursor')  #{sport}: #{away} @ #{home} {{momentify startsAt}} 
           div(class='btn btn-sm btn-default score-it-all') Soup to Nuts
@@ -11,28 +33,64 @@ template(name='score')
         +each liveEvents
           div(class='event-options cursor')  #{sport}: #{away} @ #{home} {{momentify startsAt}} 
           div(class='btn btn-sm btn-default update-events-status') Update Events
-      div(class='col-md-3')
+      div(class='col-md-4')
         h4 Step 2: Create Event Stats
         +each liveEvents
           div(class='event-options cursor')  #{sport}: #{away} @ #{home} {{momentify startsAt}} 
           div(class='btn btn-sm btn-default update-event-stats') Update EventStats
-      div(class='col-md-3')
+      div(class='col-md-6')
         h4 Step 3: Convert to Athlete Event Stats
         +each liveEvents
           div(class='event-options cursor')  #{sport}: #{away} @ #{home} {{momentify startsAt}} 
           div(class='btn btn-sm btn-default create-athlete-event-stats') Convert
-      div(class='col-md-3')
+      div(class='col-md-2')
         h4 Step 4. Score
         +each liveEvents
           div(class='event-options cursor')  #{sport}: #{away} @ #{home} {{momentify startsAt}} 
           div(class='btn btn-sm btn-default score-stats') Score Em! 
       div(class='col-md-3')
         h4 Step 5. Add Total Score to Entries
-        +each liveEvents
-          div(class='event-options cursor')  #{sport}: #{away} @ #{home} {{momentify startsAt}} 
-          div(class='btn btn-sm btn-default score-entries') Add Totals to Entries
+        select(id='total-score-sport-select')
+          option(value='NFL') NFL Week
+        select(id='total-score-schedule-select')
+          option(value='1') 1
+          option(value='2') 2
+          option(value='3') 3
+          option(value='4') 4
+          option(value='5') 5
+          option(value='6') 6
+          option(value='7') 7
+          option(value='8') 8
+          option(value='9') 9
+          option(value='10') 10
+          option(value='11') 11
+          option(value='12') 12
+          option(value='13') 13
+          option(value='14') 14
+          option(value='15') 15
+          option(value='16') 16
+          option(value='17') 17
+        div(class='btn btn-sm btn-default total-score-to-entries-week-all') Score Week
       div(class='col-md-3')
         h4 Step 6. Rank Entries
-        +each liveEvents
-          div(class='event-options cursor')  #{sport}: #{away} @ #{home} {{momentify startsAt}} 
-          div(class='btn btn-sm btn-default rank-entries') Rank 'em
+        select(id='rank-entries-sport-select')
+          option(value='NFL') NFL Week
+        select(id='rank-entries-schedule-select')
+          option(value='1') 1
+          option(value='2') 2
+          option(value='3') 3
+          option(value='4') 4
+          option(value='5') 5
+          option(value='6') 6
+          option(value='7') 7
+          option(value='8') 8
+          option(value='9') 9
+          option(value='10') 10
+          option(value='11') 11
+          option(value='12') 12
+          option(value='13') 13
+          option(value='14') 14
+          option(value='15') 15
+          option(value='16') 16
+          option(value='17') 17
+        div(class='btn btn-sm btn-default rank-entries-week-all') Score Week
