--- a/client/templates/administrator/contest/contestCreate.sass
+++ b/client/templates/administrator/contest/contestCreate.sass
@@ -1,11 +1,16 @@
 $lightGrey: #f4f4f4
 
+.contest-create
+	.team-logo
+    height: 50px 
+    width: 50px    
+
 .form-section
   background: $lightGrey
   padding: 10px
 
-  // input[type=radio]
-    // display: none
+// input[type=radio]
+// display: none
 
 .expandable
   display: none
