--- a/client/templates/entries/entry.sass
+++ b/client/templates/entries/entry.sass
@@ -1,3 +1,5 @@
+// REGULAR ENTRY VIEW
+// 
 .entry-view
 	height: 500px
 
@@ -13,7 +15,10 @@
 
 	.player-row
 		margin-bottom: 40px
-
+	
+	.player-photo
+		height: 50px
+		width: 68px
 	.entry-view-mini
 		width: 34px 
 
@@ -26,10 +31,31 @@
 	.team-logo
 		height: 50px
 		width: 50px
+	.relevant-stats
+		.stat
+			float: left
+			overflow: hidden
+		
 
+// MINI ENTRY VIEW
+// 
 .entry-view-mini
+	.player-name
+		margin-left: 15px
 	.team-logo
 		height: 50px
 		width: 50px
-	// .name
-	// 	margin: auto
+	.player-photo
+		height: 50px
+		width: 68px
+
+.width-30
+	width: 30%
+.width-70
+	width: 70%
+.width-50
+	width: 50%
+.width-60
+	width: 60%
+.width-40
+	width: 40%
